Notes/MSys2/Building wxGTK using MSys2 packaging.txt
Building wxWidgets using MSys2 packaging.txt

See https://wiki.archlinux.org/index.php/PKGBUILD
    https://www.archlinux.org/pacman/PKGBUILD.5.html

# Open MSys2 command prompt


# One time build tools installation
pacman -S base-devel
# for building mingw32 packages
pacman -S mingw-w64-i686-toolchain
# for building mingw64 packages
pacman -S mingw-w64-x86_64-toolchain


# Change to package(s) folder
cd C:/Devel/open_source_code/version_control/MINGW_packages-git/mingw-w64-wxwidgets3.1-git
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf                               # Needs Re-Tested
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.1-gtk3-git.pkgbuild # Needs Re-Tested *
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.1-gtk2-git.pkgbuild # Needs Re-Tested *

# Change to package(s) folder
cd C:/Devel/open_source_code/version_control/MINGW_packages-git/mingw-w64-wxwidgets3.1
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf                               # Package was built and installs
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.1-gtk3.pkgbuild     # Needs Re-Tested *
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.1-gtk2.pkgbuild     # Building


# Change to package(s) folder
cd C:/Devel/open_source_code/version_control/MINGW_packages-git/mingw-w64-wxwidgets3.0-git
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf                               # Package was built and installs
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.0-gtk3-git.pkgbuild # Package was built
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.0-gtk2-git.pkgbuild # Building

# Change to package(s) folder
cd C:/Devel/open_source_code/version_control/MINGW_packages-git/mingw-w64-wxwidgets
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf                               # Package was built and installs
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.0-gtk3.pkgbuild     # Needs Re-Tested *
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk3.0-gtk2.pkgbuild     # Needs Re-Tested *

# Change to package(s) folder
cd C:/Devel/open_source_code/version_control/MINGW_packages-git/mingw-w64-wxwidgets2.8-git
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf                               # Package was built and installs
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf -p wxgtk2.8-gtk2-git.pkgbuild # Failed

In file included from ./src/regex/regcustom.h:39:0,
                 from ./src/regex/regguts.h:38,
                 from ./src/regex/regexec.c:32:
./include/wx/defs.h:2825:20: error: conflicting types for 'WXWidget'
 typedef GtkWidget *WXWidget;
                    ^~~~~~~~
./include/wx/defs.h:2616:25: note: previous declaration of 'WXWidget' was here
 typedef WXHWND          WXWidget;
                         ^~~~~~~~


# Build the 32 bit and 64 packages
# makepkg-mingw -sLf

# Build only the 32 bit package
MINGW_INSTALLS=mingw32 makepkg-mingw -sLf

# Build only the 64 bit package
#  MINGW_INSTALLS=mingw64 makepkg-mingw -sLf


# Look for the packages
ls mingw-w64-*-*-*-*.pkg.tar.xz

pacman -Qs wxwidgets

# Install a 'local' 32 bit package
pacman -U mingw-w64-i686-wxWidgets2.8-2.8.12-1-any.pkg.tar.xz

# Install a 'local' 64 bit package
pacman -U mingw-w64-x86_64-wxWidgets2.8-2.8.12-1-any.pkg.tar.xz

